# https-github.com-therobocademy-ros_training_igcar

./: README.md
Day_01_Course_Introduction/: Day_1_Course_Introduction.md
Day_02_Robotics_Introduction/: Day_2_Introduction_Robotics.md
Day_03_Learning_Ubuntu_for_ROS/: Day_3_Introduction_Ubuntu_Linux.md
Day_04_Linux_command_for_ROS/: Linux_Commands_Notes.md
Day_05_Learning_C++_for_ROS/: C++_Notes_for_ROS.md
Day_06_Git_Fundamentals/: Git_Fundamentals.md
Day_07_Python_Fundamentals/: Python_Fundamentals.md
Day_08_Introduction_to_ROS/: Day_8_Introduction_to_ROS.md
Day_09-ROS_Concepts_Part1/: Day_9_ROS_Concepts_Part1.md
Day_10-ROS_Project_Meeting_Episode-1/: ROS_Project_Meeting_Episode-1.md
Day_11-ROS_Concepts_Part2/: Day_11_ROS_Concepts_Part2.md
Day_12-ROS_Programming_Part1/: Day_12_ROS_Programming_Part1.md
Day_13_ROS_Project_Meeting_Episode-2/: ROS_Project_Meeting_Episode-2.md
Day_14_ROS_Programming_Part2/: Day_14_ROS_Programming_Part_2.md
Day_15_ROS_Programming_Part3/: Day_15_ROS_Programming_Part_3.md
Day_16_ROS_Project_Meeting_Episode-3/: ROS_Project_Meeting_Episode-3.md
Day_17_ROS_URDF_Modeling_Part_1/: Day_17_ROS_URDF_Part_1.md
Day_18_ROS_URDF_Modeling_Part_2/: Day_18_ROS_URDF_Part_2.md
Day_19_ROS_Project_Meeting_Episode-4/: ROS_Project_Meeting_Episode-3.md
Day_20_ROS_Gazebo_URDF_Part_3/: Day_20_ROS_Gazebo_URDF_Part_3.md
Day_21_ROS_Gazebo_URDF_Part_4/: Day_21_ROS_Gazebo_URDF_Part_4.md
Day_21_ROS_Gazebo_URDF_Part_4/code/mobile_description/: README.txt  package.xml
Day_24_ROS_Navigation_MoveIt/: Day_24_ROS_Navigation_MoveIt!.md
(+96 files in other folders)
