<?xml version="1.0"?>
<package>
  <name>mobile_description</name>
  <version>0.0.0</version>
  <description>The mobile description package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>

</package>
